--- a/Websites/Project HTML v1/nikocadoavocado.html
+++ b/Websites/Project HTML v1/nikocadoavocado.html
@@ -11,7 +11,7 @@
         <div class="main" id="niko">
             <h1>Nikocado Avocado</h1>
             <img src="nikocadoavacado.jpg">
-            <p>he do be eating a lot (not clickbait)</p>
+            <p>he angry</p>
         </div>
     </body>
 </HTML>
