--- a/Websites/Project HTML v1/amogus.html
+++ b/Websites/Project HTML v1/amogus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <title>joe biden</title>
+        <title>amogus</title>
     </head>
 
     <body>
@@ -11,10 +11,10 @@
             <a href="obama.html">Obama</a>
             <a href="amogus.html">Amogus</a>
         </div>
-        <div class="main" id="joebiden">
-            <h1>JOE BIDEN</h1>
-            <img src="images/joebidenfalls.jpg" alt="HAHAHA HE FELL DOWN THE STRIAS">
-            <p>joe biden omg<br>
+        <div class="main" id="niko">
+            <h1>amogus</h1>
+            <img src="images/amogus.jpg" alt="sus person goes here">
+            <p>sussy</p>
         </div>
     </body>
 </HTML>
