--- a/Websites/Project HTML v1/nikocadoavocado.html
+++ b/Websites/Project HTML v1/nikocadoavocado.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <title>Home</title>
+        <title>Nikocado Avocado</title>
     </head>
 
     <body>
         <div class="nav">
             <a href="index.html">Joe Biden</a>
+            <a href="nikocadoavocado.html">Nikocado Avacado</a>
+            <a href="obama.html">Obama</a>
+            <a href="amogus.html">Amogus</a>
         </div>
         <div class="main" id="niko">
             <h1>Nikocado Avocado</h1>
-            <img src="nikocadoavacado.jpg">
+            <img src="images/nikocadoavacado.jpg" alt="zam">
             <p>he angry</p>
         </div>
     </body>
