OMG JDOE BIDEN?!?!??!?!

--- a/Websites/Project HTML v1/amogus.html
+++ b/Websites/Project HTML v1/amogus.html
@@ -2,6 +2,28 @@
 <HTML>
     <head>
         <title>amogus</title>
+        <style>
+            body {
+                background-color: darkgray;
+                color: black;
+                font-size: 15px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            img {
+                width: 400px;
+                border: solid;
+                border-color: white;
+                border-width: 5px;
+            }
+            h1 {
+                font-size: 25px;
+                color: firebrick;
+            }
+            .achivements {
+                background-color: gray;
+                font-size: 13px;
+            }
+        </style>
     </head>
 
     <body>
@@ -11,10 +33,17 @@
             <a href="obama.html">Obama</a>
             <a href="amogus.html">Amogus</a>
         </div>
-        <div class="main" id="niko">
+        <div class="main" id="amogus">
             <h1>amogus</h1>
             <img src="images/amogus.jpg" alt="sus person goes here">
             <p>sussy</p>
+            <div class="achivements">
+                <h3>Achivements</h3>
+                <ul>
+                    <li>being really sus</li>
+                    <li>red</li>
+                </ul>
+            </div>
         </div>
     </body>
 </HTML>
