--- a/Websites/Project HTML v1/index.html
+++ b/Websites/Project HTML v1/index.html
@@ -2,6 +2,28 @@
 <HTML>
     <head>
         <title>joe biden</title>
+        <style>
+            body {
+                background-color: darkgray;
+                color: black;
+                font-size: 15px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            img {
+                width: 400px;
+                border: solid;
+                border-color: white;
+                border-width: 5px;
+            }
+            h1 {
+                font-size: 25px;
+                color: firebrick;
+            }
+            .achivements {
+                background-color: gray;
+                font-size: 13px;
+            }
+        </style>
     </head>
 
     <body>
@@ -14,7 +36,14 @@
         <div class="main" id="joebiden">
             <h1>JOE BIDEN</h1>
             <img src="images/joebidenfalls.jpg" alt="HAHAHA HE FELL DOWN THE STRIAS">
-            <p>joe biden omg<br>
+            <p>joe biden omg</p>
+            <div class="achivements">
+                <h3>Achivements</h3>
+                <ul>
+                    <li>being joe biden</li>
+                    <li>falling down stairs</li>
+                </ul>
+            </div>
         </div>
     </body>
 </HTML>
