--- a/Websites/Project HTML v1/nikocadoavocado.html
+++ b/Websites/Project HTML v1/nikocadoavocado.html
@@ -2,6 +2,28 @@
 <HTML>
     <head>
         <title>Nikocado Avocado</title>
+        <style>
+            body {
+                background-color: darkgray;
+                color: black;
+                font-size: 15px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            img {
+                width: 400px;
+                border: solid;
+                border-color: white;
+                border-width: 5px;
+            }
+            h1 {
+                font-size: 25px;
+                color: firebrick;
+            }
+            .achivements {
+                background-color: gray;
+                font-size: 13px;
+            }
+        </style>
     </head>
 
     <body>
@@ -15,6 +37,13 @@
             <h1>Nikocado Avocado</h1>
             <img src="images/nikocadoavacado.jpg" alt="zam">
             <p>he angry</p>
+            <div class="achivements">
+                <h3>Achivements</h3>
+                <ul>
+                    <li>being angry</li>
+                    <li>ahhhh'ing</li>
+                </ul>
+            </div>
         </div>
     </body>
 </HTML>
