--- a/Websites/Project HTML v1/gru.html
+++ b/Websites/Project HTML v1/gru.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <title>joe biden</title>
+        <title>gru</title>
         <style>
             body {
                 background-color: darkgray;
@@ -34,15 +34,17 @@
             <a href="amogus.html">Amogus</a>
             <a href="gru.html">gru</a>
         </div>
-        <div class="main" id="joebiden">
-            <h1>JOE BIDEN</h1>
-            <img src="images/joebidenfalls.jpg" alt="HAHAHA HE FELL DOWN THE STRIAS">
-            <p>joe biden omg</p>
+        <div class="main" id="amogus">
+            <h1>gru</h1>
+            <img src="images/gru.jpg" alt="sus person goes here">
+            <p>look at his bald head</p>
             <div class="achivements">
                 <h3>Achivements</h3>
                 <ul>
-                    <li>being joe biden</li>
-                    <li>always falling down stairs</li>
+                    <li>stole the moon</li>
+                    <li>stole the crown jewls</li>
+                    <li>enslaved a race of yellow things</li>
+                    <li>endorces child labor</li>
                 </ul>
             </div>
         </div>
