--- a/Websites/Project HTML v1/nikocadoavocado.html
+++ b/Websites/Project HTML v1/nikocadoavocado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <title>Nikocado Avocado</title>
+        <title>Niko Avocado</title>
         <style>
             body {
                 background-color: darkgray;
@@ -29,12 +29,13 @@
     <body>
         <div class="nav">
             <a href="index.html">Joe Biden</a>
-            <a href="nikocadoavocado.html">Nikocado Avacado</a>
+            <a href="nikocadoavocado.html">Niko Avacado</a>
             <a href="obama.html">Obama</a>
             <a href="amogus.html">Amogus</a>
+            <a href="gru.html">gru</a>
         </div>
         <div class="main" id="niko">
-            <h1>Nikocado Avocado</h1>
+            <h1>Niko Avocado</h1>
             <img src="images/nikocadoavacado.jpg" alt="zam">
             <p>he angry</p>
             <div class="achivements">
