--- a/Websites/Project HTML v1/obama.html
+++ b/Websites/Project HTML v1/obama.html
@@ -29,9 +29,10 @@
     <body>
         <div class="nav">
             <a href="index.html">Joe Biden</a>
-            <a href="nikocadoavocado.html">Nikocado Avacado</a>
+            <a href="nikocadoavocado.html">Niko Avacado</a>
             <a href="obama.html">Obama</a>
             <a href="amogus.html">Amogus</a>
+            <a href="gru.html">gru</a>
         </div>
         <div class="main" id="obama">
             <h1>Obama</h1>
