--- a/Websites/Project HTML v3/amogus.html
+++ b/Websites/Project HTML v3/amogus.html
@@ -45,6 +45,7 @@
                     <li>red</li>
                 </ul>
             </div>
+            <a href="https://en.wikipedia.org/wiki/Among_Us" target="_blank">game about the sus guy</a>
         </div>
     </body>
 </HTML>
