--- a/Websites/Project HTML v3/nikocadoavocado.html
+++ b/Websites/Project HTML v3/nikocadoavocado.html
@@ -45,6 +45,7 @@
                     <li>ahhhh'ing</li>
                 </ul>
             </div>
+            <a href="https://en.wikipedia.org/wiki/Nikocado_Avocado" target="_blank">guys look its the dude himself</a>
         </div>
     </body>
 </HTML>
