--- a/Websites/Project HTML v3/obama.html
+++ b/Websites/Project HTML v3/obama.html
@@ -45,6 +45,7 @@
                     <li>he cant hear you hes got airpods in</li>
                 </ul>
             </div>
+            <a href="https://en.wikipedia.org/wiki/Obama" target="_blank">guys look its obama</a>
         </div>
     </body>
 </HTML>
