--- a/Websites/sch.krzy.dev/ProjectHTMLv3/gru/index.html
+++ b/Websites/sch.krzy.dev/ProjectHTMLv3/gru/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <title>joe biden</title>
+        <title>gru</title>
         <style>
             body {
                 background-color: darkgray;
@@ -28,24 +28,26 @@
 
     <body>
         <div class="nav">
-            <a href="index.html">Joe Biden</a>
-            <a href="nikocadoavocado.html">Niko Avacado</a>
-            <a href="obama.html">Obama</a>
-            <a href="amogus.html">Amogus</a>
-            <a href="gru.html">gru</a>
+            <a href="../joebiden">Joe Biden</a>
+            <a href="../nikoavacado/">Niko Avacado</a>
+            <a href="../obama/">Obama</a>
+            <a href="../amogus/">Amogus</a>
+            <a href="../gru/">gru</a>
         </div>
-        <div class="main" id="joebiden">
-            <h1>JOE BIDEN</h1>
-            <img src="images/joebidenfalls.jpg" alt="HAHAHA HE FELL DOWN THE STRIAS">
-            <p>joe biden omg</p>
+        <div class="main" id="amogus">
+            <h1>gru</h1>
+            <img src="../images/gru.jpg" alt="sus person goes here">
+            <p>look at his bald head</p>
             <div class="achivements">
                 <h3>Achivements</h3>
                 <ul>
-                    <li>being joe biden</li>
-                    <li>always falling down stairs</li>
+                    <li>stole the moon</li>
+                    <li>stole the crown jewls</li>
+                    <li>enslaved a race of yellow things</li>
+                    <li>endorces child labor</li>
                 </ul>
             </div>
-            <a href="https://en.wikipedia.org/wiki/Joe_Biden" target="_blank">guys look its joe biden</a>
+            <a href="https://en.wikipedia.org/wiki/Despicable_Me" target="_blank">gru's home town</a>
         </div>
     </body>
 </HTML>
