--- a/Websites/sch.krzy.dev/ProjectHTMLv3/nikoavacado/index.html
+++ b/Websites/sch.krzy.dev/ProjectHTMLv3/nikoavacado/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <title>Obama</title>
+        <title>Niko Avocado</title>
         <style>
             body {
                 background-color: darkgray;
@@ -28,24 +28,24 @@
 
     <body>
         <div class="nav">
-            <a href="index.html">Joe Biden</a>
-            <a href="nikocadoavocado.html">Niko Avacado</a>
-            <a href="obama.html">Obama</a>
-            <a href="amogus.html">Amogus</a>
-            <a href="gru.html">gru</a>
+            <a href="../joebiden">Joe Biden</a>
+            <a href="../nikoavacado/">Niko Avacado</a>
+            <a href="../obama/">Obama</a>
+            <a href="../amogus/">Amogus</a>
+            <a href="../gru/">gru</a>
         </div>
-        <div class="main" id="obama">
-            <h1>Obama</h1>
-            <img src="images/obama.png" alt="a really really cool picture of obama">
-            <p>whats his last name?</p>
+        <div class="main" id="niko">
+            <h1>Niko Avocado</h1>
+            <img src="../images/nikocadoavacado.jpg" alt="zam">
+            <p>he angry</p>
             <div class="achivements">
                 <h3>Achivements</h3>
                 <ul>
-                    <li>being a mystery</li>
-                    <li>he cant hear you hes got airpods in</li>
+                    <li>being angry</li>
+                    <li>ahhhh'ing</li>
                 </ul>
             </div>
-            <a href="https://en.wikipedia.org/wiki/Obama" target="_blank">guys look its obama</a>
+            <a href="https://en.wikipedia.org/wiki/Nikocado_Avocado" target="_blank">guys look its the dude himself</a>
         </div>
     </body>
 </HTML>
