--- a/Websites/sch.krzy.dev/ProjectHTMLv3/amogus/index.html
+++ b/Websites/sch.krzy.dev/ProjectHTMLv3/amogus/index.html
@@ -28,15 +28,15 @@
 
     <body>
         <div class="nav">
-            <a href="index.html">Joe Biden</a>
-            <a href="nikocadoavocado.html">Niko Avacado</a>
-            <a href="obama.html">Obama</a>
-            <a href="amogus.html">Amogus</a>
-            <a href="gru.html">gru</a>
+            <a href="../joebiden">Joe Biden</a>
+            <a href="../nikoavacado/">Niko Avacado</a>
+            <a href="../obama/">Obama</a>
+            <a href="../amogus/">Amogus</a>
+            <a href="../gru/">gru</a>
         </div>
         <div class="main" id="amogus">
             <h1>amogus</h1>
-            <img src="images/amogus.jpg" alt="sus person goes here">
+            <img src="../images/amogus.jpg" alt="sus person goes here">
             <p>sussy</p>
             <div class="achivements">
                 <h3>Achivements</h3>
