--- a/Websites/sch.krzy.dev/index.html
+++ b/Websites/sch.krzy.dev/index.html
@@ -2,7 +2,12 @@
 <html>
     <body>
         <ul>
-            <li><a href="ProjectHTMLv3/joebiden">Project HTML v3</a></li>
+            <li>Project HTML 
+                <ul>
+                    <li><a href="ProjectHTMLv3/joebiden">v3 (internal style sheets)</a></li>
+                    <li><a href="ProjectHTMLv4/joebiden">v4 (external style sheets)</a></li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
