--- a/Websites/sch.krzy.dev/ProjectHTMLv4/amogus/index.html
+++ b/Websites/sch.krzy.dev/ProjectHTMLv4/amogus/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <div class="nav">
+            <a href="../../">Home</a>
             <a href="../joebiden">Joe Biden</a>
             <a href="../nikoavacado/">Niko Avacado</a>
             <a href="../obama/">Obama</a>
