--- a/Websites/sch.krzy.dev/index.html
+++ b/Websites/sch.krzy.dev/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>sch.krzy.dev</title>
+    </head>
     <body>
         <ul>
             <li>Project HTML 
