--- a/Websites/sch.krzy.dev/index.html
+++ b/Websites/sch.krzy.dev/index.html
@@ -3,13 +3,32 @@
     <head>
         <title>sch.krzy.dev</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="dropdown">
-            <button class="dropbtn">Project HTML</button>
-            <div class="dropdown-content">
-                <a href="ProjectHTMLv3/joebiden">v3 (internal style sheets)</a>
-                <a href="ProjectHTMLv4/joebiden">v4 (external style sheets)</a>
+        <div class="container">
+            <div class="heading">
+                <div class="title">
+                    <h1>sch.krzy.dev</h1>
+                </div>
+                <div class="navbar">
+                    <div class="dropdown">
+                        <button class="dropbtn">Project HTML</button>
+                        <div class="dropdown-content">
+                            <a href="ProjectHTMLv3/joebiden">v3 (internal style sheets)</a>
+                            <a href="ProjectHTMLv4/joebiden">v4 (external style sheets)</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">Responsive design</button>
+                        <div class="dropdown-content">
+                            <a href="ResponsiveDesign/">Responsive design</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mainbody">
+                <p>Just the websites that I make in school</p>
             </div>
         </div>
     </body>
