--- a/Websites/sch.krzy.dev/index.html
+++ b/Websites/sch.krzy.dev/index.html
@@ -25,6 +25,12 @@
                             <a href="ResponsiveDesign/">Responsive design</a>
                         </div>
                     </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">JavaScript</button>
+                        <div class="dropdown-content">
+                            <a href="JSConversions/">Conversions</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="mainbody">
