--- a/Websites/sch.krzy.dev/JSConversions/index.html
+++ b/Websites/sch.krzy.dev/JSConversions/index.html
@@ -16,13 +16,13 @@
         <legend>Miles and Kilometres</legend>
 
         <label for="miles">miles</label>
-        <input type="text" id="miles" onkeyup="miles2kms()" value=1>
+        <input type="text" id="miles" onkeyup="miles2kms()">
 
         <button id="miles2km" onclick="miles2kms();">convert to kms</button></br>
 
         <label for="kms">kilometers</label>
 
-        <input type="text" id="kms" onkeyup="kms2miles()" value=1.61>
+        <input type="text" id="kms" onkeyup="kms2miles()">
         <button id="km2miles" onclick="kms2miles()">convert to miles</button></br>
 
     </fieldset>
