--- a/Websites/sch.krzy.dev/JSConversions/index.html
+++ b/Websites/sch.krzy.dev/JSConversions/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <a href="../">Home</a>
     <h1>Converter</h1>
     <fieldset>
         <legend>Miles and Kilometres</legend>
