--- a/Websites/sch.krzy.dev/index.html
+++ b/Websites/sch.krzy.dev/index.html
@@ -29,6 +29,7 @@
                         <button class="dropbtn">JavaScript</button>
                         <div class="dropdown-content">
                             <a href="JSConversions/">Conversions</a>
+                            <a href="JavaScriptExample/">JavaScript Example</a>
                         </div>
                     </div>
                 </div>
