--- a/Websites/sch.krzy.dev/ProjectHTMLv4/obama/index.html
+++ b/Websites/sch.krzy.dev/ProjectHTMLv4/obama/index.html
@@ -25,7 +25,7 @@
                     <li>he cant hear you hes got airpods in</li>
                 </ul>
             </div>
-            <a href="https://en.wikipedia.org/wiki/Obama" target="_blank">guys look its obama</a>
+            <a href="https://en.wikipedia.org/wiki/Barack_Obama" target="_blank">guys look its obama</a>
         </div>
     </body>
 </HTML>
