--- a/Websites/sch.krzy.dev/JavaScriptExample/index.html
+++ b/Websites/sch.krzy.dev/JavaScriptExample/index.html
@@ -31,8 +31,7 @@
     <button onclick="resetHeading()">Click to reset myheading style</button>
 
     <p> </P>
-    <p>Pressing this button removes the new styling and reverts back to the style specified in the stylesheet
-    <p>
+    <p>Pressing this button removes the new styling and reverts back to the style specified in the stylesheet<p>
 
         <button onclick="changeColor()">Change Background Color</button></br>
 
