--- a/Websites/sch.krzy.dev/JavaScriptExample/index.html
+++ b/Websites/sch.krzy.dev/JavaScriptExample/index.html
@@ -17,13 +17,15 @@
     <h3>Press the buttons to change the style of the page heading</h3>
     <p>Pressing the button below
     <p>
-    <ol onmouseout="this.style.color='black';" onmouseover="this.style.color='red';">
+    <ol onmouseout="this.style.color='black';" onmouseover="this.style.color='red';"> 
         <li>Changes background colour to blue</li>
         <li>Changes text colour to white</li>
         <li>Changes the font to comic-sans</li>
         <li>Changes the alignmet to centre</li>
         <li>Increases the count by 1</li>
     </ol>
+
+    <p class="font-change">Hover over me to change the font size</p>
 
     <button onclick="formatHeading()">Click to change myheading style</button></br>
 
