this code liteerly sucks so much i dont know how to spell it

--- a/Websites/sch.krzy.dev/index.html
+++ b/Websites/sch.krzy.dev/index.html
@@ -30,6 +30,7 @@
                         <div class="dropdown-content">
                             <a href="JSConversions/">Conversions</a>
                             <a href="JavaScriptExample/">JavaScript Example</a>
+                            <a href="JavaScriptHomework/">JavaScript Homework</a>
                         </div>
                     </div>
                 </div>
