--- a/Websites/sch.krzy.dev/ProjectHTMLv3/joebiden/index.html
+++ b/Websites/sch.krzy.dev/ProjectHTMLv3/joebiden/index.html
@@ -44,6 +44,7 @@
                 <ul>
                     <li>being joe biden</li>
                     <li>always falling down stairs</li>
+                    <li>explains america in one word</li>
                 </ul>
             </div>
             <a href="https://en.wikipedia.org/wiki/Joe_Biden" target="_blank">guys look its joe biden</a>
